# slice

./: .gitignore  example_main.py  pyproject.toml  pytest.ini  slice.py  slice.sh
1-2-example-ex/: expectation.py  pre_exercise_code.py  sample_code.py  solution.py
2-2-example-ex/: main.py
3-2-example-ex/: main.py  pre_exercise_code.py  sample_code.py
4-2-example-ex/: main.py
check-dir-for-path/: main.py
